<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/select_type"
        app:layout_constraintTop_toTopOf="parent">
        <AutoCompleteTextView
            android:id="@+id/type_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_from"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/select_from"
        app:layout_constraintTop_toBottomOf="@id/layout_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/layout_to">
        <AutoCompleteTextView
            android:id="@+id/from_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_to"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/select_to"
        app:layout_constraintTop_toBottomOf="@id/layout_category"
        app:layout_constraintStart_toEndOf="@id/layout_from"
        app:layout_constraintEnd_toEndOf="parent">
        <AutoCompleteTextView
            android:id="@+id/to_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/resultOutput"
        android:layout_width="406dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/output_blank"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>